tests/ui/const-generics/infer/cannot-infer-const-args.stderr
error[E0284]: type annotations needed
  --> $DIR/cannot-infer-const-args.rs:6:5
   |
LL |     foo();
   |     ^^^ cannot infer the value of the const parameter `X` declared on the function `foo`
   |
note: required by a const generic parameter in `foo`
  --> $DIR/cannot-infer-const-args.rs:1:8
   |
LL | fn foo<const X: usize>() -> usize {
   |        ^^^^^^^^^^^^^^ required by this const generic parameter in `foo`
help: consider specifying the generic argument
   |
LL |     foo::<X>();
   |        +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
